Refd #804 - Fixed issue with mobile only string visible on desktop download page

--- a/static/css/download.css
+++ b/static/css/download.css
@@ -300,7 +300,7 @@ Android device using Samsung Internet or Firefox */
 
   .show-mobile
   {
-    display: none;
+    display: none !important;
   }
 
   .download-options .tab-media-contents
